--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.dylib filter=lfs diff=lfs merge=lfs -text
 .assets filter=lfs diff=lfs merge=lfs -text
+.resource filter=lfs diff=lfs merge=lfs -text
