--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 *.dylib filter=lfs diff=lfs merge=lfs -text
 .assets filter=lfs diff=lfs merge=lfs -text
 .resource filter=lfs diff=lfs merge=lfs -text
+*.resource filter=lfs diff=lfs merge=lfs -text
+*.assets filter=lfs diff=lfs merge=lfs -text
