--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 . filter=lfs diff=lfs merge=lfs -text
 *.obj filter=lfs diff=lfs merge=lfs -text
 Assets filter=lfs diff=lfs merge=lfs -text
+Library filter=lfs diff=lfs merge=lfs -text
