--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 .resource filter=lfs diff=lfs merge=lfs -text
 .assets filter=lfs diff=lfs merge=lfs -text
+.dll filter=lfs diff=lfs merge=lfs -text
