--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,7 @@
 .resource filter=lfs diff=lfs merge=lfs -text
 .assets filter=lfs diff=lfs merge=lfs -text
 .dll filter=lfs diff=lfs merge=lfs -text
+*.resource filter=lfs diff=lfs merge=lfs -text
+*.assets filter=lfs diff=lfs merge=lfs -text
+UnityPlayer.dll filter=lfs diff=lfs merge=lfs -text
+WinPixEventRuntime.dll filter=lfs diff=lfs merge=lfs -text
